--- a/flaskr/templates/profile/createprofile.html
+++ b/flaskr/templates/profile/createprofile.html
@@ -7,135 +7,178 @@
 <br>
 
 {% block content %}
-  <form method="post" enctype = "multipart/form-data">
-    
-    <label for="fname">First Name</label>
-    <input name="fname" id="fname" required>
-    
-    <label for="mname">Middle Name</label>
-    <input name="mname" id="mname">
-    
-    <label for="lname">Last Name</label>
-    <input name="lname" id="lname" required>
 
-    <label for="photo">Photo</label>
-    <input type="file" id="photo" name="photo" accept="image/*" required>
+  <div class="boxed">
+    <div class="container">
+      <div class= "user-details">
+        <form method="post" enctype = "multipart/form-data">
+          
+          <div class = "input-box">
+            <label for="fname" class="details">First Name</label>
+            <input name="fname" id="fname" required>
+          </div>
 
-    <label for="dob">Date of Birth:</label>
-    <input type="date" id="dob" name="dob">
+          <div class = "input-box">
+            <label for="mname" class="details">Middle Name</label>
+            <input name="mname" id="mname">
+          </div>
 
-    <label for="occupation">Occupation</label>
-    <input name="occupation" id="occupation" required>
-                
-    <label for="description">Description</label>
-    <textarea name="description" id="description"></textarea>
+          <div class = "input-box">
+            <label for="lname" class="details">Last Name</label>
+            <input name="lname" id="lname" required>
+          </div>
 
-    <label for="gender">Gender:</label>
-    <select name="gender" id="gender">
-      <option value="O">Other</option>
-      <option value="M">Male</option>
-      <option value="F">Female</option>
-    </select>
+          <div >
+            <label for="photo" class = "details">Photo</label>
+            <input type="file" id="photo" name="photo" accept="image/*" required>
+          </div>
 
-    <label for="genderPref">Gender Preferences:</label>
-    <select name="genderPref" id="genderPref">
-      <option value="C">Co-Ed</option>
-      <option value="M">Males Only</option>
-      <option value="F">Females Only</option>
-      <option value="I">Independent</option>
-    </select>
+          <div class = "input-box">
+            <label for="dob">Date of Birth:</label>
+            <input type="date" id="dob" name="dob">
+          </div>
 
+          <div class = "input-box">
+            <label for="occupation">Occupation</label>
+            <input name="occupation" id="occupation" required>
+          </div>
+          
+          <div class = "form-group">
+            <label for="description">Description</label>
+            <textarea name="description" id="description" class ="form-control"></textarea>
+          </div>
 
-    <label for="minage">Minimum Age</label>
-    <input name="minage" type="number" id="minage" required>
+          <div class = "input-box">
+            <label for="gender">Gender:</label>
+            <select name="gender" id="gender">
+              <option value="O">Other</option>
+              <option value="M">Male</option>
+              <option value="F">Female</option>
+            </select>
+          </div>
 
-    <label for="maxage">Maximum Age</label>
-    <input name="maxage" type="number" id="maxage" required>
+          <div class = "input-box">
+            <label for="genderPref">Gender Preferences:</label>
+            <select name="genderPref" id="genderPref">
+              <option value="C">Co-Ed</option>
+              <option value="M">Males Only</option>
+              <option value="F">Females Only</option>
+              <option value="I">Independent</option>
+            </select>
+          </div>
+          
 
-    <label for="minprice">Minimum Price</label>
-    <input name="minprice" type="number" id="minprice" required>
+          <div class = "input-box">
+            <label for="minage">Minimum Age</label>
+            <input name="minage" type="number" id="minage" required>
+          </div>
 
-    <label for="maxprice">Maximum Price</label>
-    <input name="maxprice" type="number" id="maxprice" required>
-
-    <label for="city">City</label>
-    <input name="city" id="city" required>
-
-    <label for="state">State</label>
-    <select name="state" id="state">
-      <option value="AL">AL</option>
-      <option value="AK">AK</option>
-      <option value="AR">AR</option>	
-      <option value="AZ">AZ</option>
-      <option value="CA">CA</option>
-      <option value="CO">CO</option>
-      <option value="CT">CT</option>
-      <option value="DC">DC</option>
-      <option value="DE">DE</option>
-      <option value="FL">FL</option>
-      <option value="GA">GA</option>
-      <option value="HI">HI</option>
-      <option value="IA">IA</option>	
-      <option value="ID">ID</option>
-      <option value="IL">IL</option>
-      <option value="IN">IN</option>
-      <option value="KS">KS</option>
-      <option value="KY">KY</option>
-      <option value="LA">LA</option>
-      <option value="MA">MA</option>
-      <option value="MD">MD</option>
-      <option value="ME">ME</option>
-      <option value="MI">MI</option>
-      <option value="MN">MN</option>
-      <option value="MO">MO</option>	
-      <option value="MS">MS</option>
-      <option value="MT">MT</option>
-      <option value="NC">NC</option>	
-      <option value="NE">NE</option>
-      <option value="NH">NH</option>
-      <option value="NJ">NJ</option>
-      <option value="NM">NM</option>			
-      <option value="NV">NV</option>
-      <option value="NY">NY</option>
-      <option value="ND">ND</option>
-      <option value="OH">OH</option>
-      <option value="OK">OK</option>
-      <option value="OR">OR</option>
-      <option value="PA">PA</option>
-      <option value="RI">RI</option>
-      <option value="SC">SC</option>
-      <option value="SD">SD</option>
-      <option value="TN">TN</option>
-      <option value="TX">TX</option>
-      <option value="UT">UT</option>
-      <option value="VT">VT</option>
-      <option value="VA">VA</option>
-      <option value="WA">WA</option>
-      <option value="WI">WI</option>	
-      <option value="WV">WV</option>
-      <option value="WY">WY</option>
-    </select>
-       
-
-    <label for="zipcode">Zipcode</label>
-    <input name="zipcode" type="number" id="zipcode" required>
-    
-    <label for="pets">Pets:</label>
-    <select name="pets" id="pets">
-      <option value="Y">Yes</option>
-      <option value="N">No</option>
-    </select>
-
-    <label for="looking">Looking for: </label>
-    <select name="looking" id="looking">
-      <option value="B">Roommates and Housing</option>
-      <option value="H">Housing Only</option>
-      <option value="R">Roommates Only</option>
-    </select>
-
-    <input type="submit" value="Create Profile">
+          <div class = "input-box">
+            <label for="maxage">Maximum Age</label>
+            <input name="maxage" type="number" id="maxage" required>
+          </div>
 
 
-  </form>
+          <div class = "input-box">
+            <label for="minprice">Minimum Price</label>
+            <input name="minprice" type="number" id="minprice" required>
+          </div>
 
+          <div class = "input-box">
+            <label for="maxprice">Maximum Price</label>
+            <input name="maxprice" type="number" id="maxprice" required>
+          </div>
+
+          <div class = "input-box">
+            <label for="city">City</label>
+            <input name="city" id="city" required>
+          </div>
+
+          <div class = "input-box">
+            <label for="state">State</label>
+            <select name="state" id="state">
+              <option value="AL">AL</option>
+              <option value="AK">AK</option>
+              <option value="AR">AR</option>	
+              <option value="AZ">AZ</option>
+              <option value="CA">CA</option>
+              <option value="CO">CO</option>
+              <option value="CT">CT</option>
+              <option value="DC">DC</option>
+              <option value="DE">DE</option>
+              <option value="FL">FL</option>
+              <option value="GA">GA</option>
+              <option value="HI">HI</option>
+              <option value="IA">IA</option>	
+              <option value="ID">ID</option>
+              <option value="IL">IL</option>
+              <option value="IN">IN</option>
+              <option value="KS">KS</option>
+              <option value="KY">KY</option>
+              <option value="LA">LA</option>
+              <option value="MA">MA</option>
+              <option value="MD">MD</option>
+              <option value="ME">ME</option>
+              <option value="MI">MI</option>
+              <option value="MN">MN</option>
+              <option value="MO">MO</option>	
+              <option value="MS">MS</option>
+              <option value="MT">MT</option>
+              <option value="NC">NC</option>	
+              <option value="NE">NE</option>
+              <option value="NH">NH</option>
+              <option value="NJ">NJ</option>
+              <option value="NM">NM</option>			
+              <option value="NV">NV</option>
+              <option value="NY">NY</option>
+              <option value="ND">ND</option>
+              <option value="OH">OH</option>
+              <option value="OK">OK</option>
+              <option value="OR">OR</option>
+              <option value="PA">PA</option>
+              <option value="RI">RI</option>
+              <option value="SC">SC</option>
+              <option value="SD">SD</option>
+              <option value="TN">TN</option>
+              <option value="TX">TX</option>
+              <option value="UT">UT</option>
+              <option value="VT">VT</option>
+              <option value="VA">VA</option>
+              <option value="WA">WA</option>
+              <option value="WI">WI</option>	
+              <option value="WV">WV</option>
+              <option value="WY">WY</option>
+            </select>
+          </div>
+            
+          <div class = "input-box">
+            <label for="zipcode">Zipcode</label>
+            <input name="zipcode" type="number" id="zipcode" required>
+          </div>
+
+
+          <div class = "input-box">
+            <label for="pets">Pets:</label>
+            <select name="pets" id="pets">
+              <option value="Y">Yes</option>
+              <option value="N">No</option>
+            </select>
+          </div>
+
+
+          <div class = "input-box">
+            <label for="looking">Looking for: </label>
+            <select name="looking" id="looking">
+              <option value="B">Roommates and Housing</option>
+              <option value="H">Housing Only</option>
+              <option value="R">Roommates Only</option>
+            </select>
+          </div>
+          <input type="submit" value="Create Profile">
+
+
+        </form>
+      </div>
+    </div>
+  </div>
 {% endblock %}
