--- a/flaskr/templates/auth/login.html
+++ b/flaskr/templates/auth/login.html
@@ -3,17 +3,28 @@
 {% block content %}
   
 
-    <h1>Log In</h1>  
-    <form method="post">
-      
-      <label for="username">Username</label>
-      <input name="username" id="username" placeholder = "Enter Your Username" required>
-                
-      <label for="password">Password</label>
-      <input type="password" name="password" id="password" placeholder= "Enter your Password"required>
-
-      <input type="submit" value="Log In">
   
-    </form>
+
+<form method="post">
+  <div class="boxed">
+      <div class="container">
+        <div class= "user-details">
+        <h1>Log In</h1>  
+        <div class = "input-box">
+          <label for="username" class="details">Username</label>
+          <input name="username" id="username" placeholder = "Enter Your Username" required>
+        <div>
+        
+        <div class = "input-box">
+          <label for="password" class="details">Password</label>
+          <input type="password" name="password" id="password" placeholder= "Enter your Password"required>
+        <div>
+
+        <input type="submit" value="Log In">
+      </div>
+    </div>
+  </div>
+</form>
+
   
 {% endblock %}
