--- a/flaskr/templates/auth/register.html
+++ b/flaskr/templates/auth/register.html
@@ -2,25 +2,42 @@
 
 {% block content %}
 
-<h1>Register</h1>
 
-<form method="post">
-  <label for="username">Username</label>
-  <input name="username" id="username" placeholder = "Enter Your Username" required>
-  
-  <label for="email">Email</label>
-  <input type="email" name="email" id="email" placeholder = "Enter Your Email" required>
-  
-  <label for="phone">Phone</label>
-  <input type="tel" name="phone" id="phone" placeholder = "Enter Your Phone Number" required>
-  
-  <label for="password">Password</label>
-  <input type="password" name="password" id="password" placeholder = "Enter Your Password" required>
-  
-  <label for="cpassword">Confirm Password</label>
-  <input type="password" name="cpassword" id="cpassword" placeholder = "Confirm Password" required>
-  
-  <input type="submit" value="Register">
- 
-</form>
+  <form method="post">
+    <div class="boxed">
+      <div class="container">
+        <div class= "user-details">
+          
+          <h1>Registration</h1>
+
+          <div class = "input-box">
+            <label for="username"  class="details">Username</label>
+            <input name="username" id="username" placeholder = "Enter Your Username" required>
+          </div>
+        
+          <div class = "input-box">
+            <label for="email">Email</label>
+            <input type="email" name="email" id="email" placeholder = "Enter Your Email" required>
+          </div>
+          
+          <div class = "input-box">
+            <label for="phone">Phone</label>
+            <input type="tel" name="phone" id="phone" placeholder = "Enter Your Phone Number" required>
+          </div>
+
+          <div class = "input-box">
+            <label for="password">Password</label>
+            <input type="password" name="password" id="password" placeholder = "Enter Your Password" required>
+          </div>
+
+          <div class = "input-box">
+            <label for="cpassword">Confirm Password</label>
+            <input type="password" name="cpassword" id="cpassword" placeholder = "Confirm Password" required>
+          </div>
+          
+          <input type="submit" value="Register">
+        </div>
+      </div>
+    </div>
+  </form>
 {% endblock %}
