--- a/flaskr/templates/algorithm/viewmatches.html
+++ b/flaskr/templates/algorithm/viewmatches.html
@@ -7,7 +7,7 @@
 
 {% for m in mlist %}
 
-<a href="{{ url_for('roommeet.view_profile', profid=(m['poster_id'])) }}">{{ m['first_name'] }} {{ m['middle_name'] }} {{ m['last_name'] }}</a>
+<a href="{{ url_for('roommeet.view_profile', profid=(m['user_id'])) }}">{{ m['first_name'] }} {{ m['middle_name'] }} {{ m['last_name'] }}</a>
 {{ m['phone'] }}
 <br>
 
