--- a/flaskr/templates/base.html
+++ b/flaskr/templates/base.html
@@ -12,7 +12,8 @@
       <li><a href="{{ url_for('roommeet.change_profile') }}">Change Profile</a>
       <li><a href="{{ url_for('roommeet.view_profile', profid=(g.user['id'])) }}">View Profile</a>
       <li><a href="{{ url_for('housing.housings') }}">Your Housings</a>
-
+      <li><a href="{{ url_for('algorithm.selections') }}">Your Selections</a>
+      <li><a href="{{ url_for('algorithm.matches') }}">Your Matchings</a>
       {% endif %}
       <li><a href="{{ url_for('auth.change_account') }}">Account Settings</a>
       <li><a href="{{ url_for('auth.logout') }}">Log Out</a>
