--- a/flaskr/templates/base.html
+++ b/flaskr/templates/base.html
@@ -9,7 +9,7 @@
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
       {% if g.user %}
-        <li class="nav-item active"><span>{{ g.user['username'] }}</span>
+        <li class="nav-item active"><span class="nav-link disabled">{{ g.user['username'] }}</span>
         {% if g.user['verified'] == 0 %}
         <li class="nav-item active"><a class="nav-link" href="{{ url_for('roommeet.create_profile') }}">Complete Profile</a>
         {% else %}
